fixed demoreel overlapping navbar

--- a/css/home.scss
+++ b/css/home.scss
@@ -3,6 +3,9 @@
     margin-top:-3%;
 }
 
+#everything{
+    display:block;
+}
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width: 1200px) {
     #imgwall {
