--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@ p {
   color: white;
 }
 #topbar {
+  background-color:#19191D;
   top:0;
   z-index: 2;
   padding-bottom: 20px;
@@ -96,20 +97,13 @@ p {
 //   }
 // }
 #demoreel{
+  margin-top:70px;
   z-index: 0;
-  width:88%;
-  // max-height:100px !important;
-  margin:0 auto;
-  overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
-    height:0;
+
+  position:relative;
+  padding-top:56.25%;
   iframe{
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
+    position:absolute;top:0;left:0;width:100%;height:100%;
     }
 }
 hr {
@@ -118,7 +112,7 @@ hr {
   margin-bottom: 30px;
 }
 
-#imgwall {
+#imgwall { 
   
   display: grid;
   /* grid-template-columns: repeat(auto-fill,minmax(50%,1fr)); */
@@ -305,7 +299,7 @@ body.fade-out {
     
   }
   #demoreel{
-    top:60px;
+    // top:60px;
     width:100%;
   }
 
@@ -350,7 +344,5 @@ body.fade-out {
   #imgwall {
     grid-template-columns: repeat(3, 1fr);
   }
-  #demoreel{
-    top:-40px;
-  }
+  
 }
